--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
     "@react-native-firebase/firestore": "^18.3.0",
@@ -23,6 +24,7 @@
     "expo-contacts": "~12.2.0",
     "expo-device": "~5.4.0",
     "expo-notifications": "~0.20.1",
+    "expo-sms": "^13.1.4",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.0",
     "react": "18.2.0",
